--- a/javaScript/11_regex/1.md
+++ b/javaScript/11_regex/1.md
@@ -666,13 +666,368 @@ But what if you wanted to match more **specific subsets of characters**?
 Character classes are a powerful tool that gives you incredible control over your pattern matching.
 
 
-## 11.5. 
+## 11.5. What are lookahead and lookbehind assertions and how do they work?
+
+Lookahead and lookbehind assertions allow you to match specific patterns based on the presence or lack of surrounding patterns. There are four variations of these assertions.
+
+- First is the **positive lookahead** assertion. This assertion will match a pattern when the pattern is followed by another pattern.
+
+    To construct a positive lookahead, you need to start with the pattern you want to match. Then, use parentheses to wrap the pattern you want to use as your condition. After the opening parenthesis, use `?=` to define that pattern as a positive lookahead.
+
+    This pattern will only match the word `free` if it is followed by `code`:
+
+    ```js
+    const regex = /free(?=code)/i;
+    ```
+
+    Let's test the behavior of our pattern:
+
+    ```js
+    const regex = /free(?=code)/i;
+    console.log(regex.test("freeCodeCamp")); // true
+    console.log(regex.test("free code camp")); // false
+    console.log(
+        regex.test("I need someone for free to write code for me")
+    ); // false
+    ```
+
+    Notice how only the string where `free` is immediately followed by `code` passes the test.
+
+- But what if you want to match the presence of `free` when it is NOT followed by `code`? You can turn your positive lookahead into a **negative lookahead** to invert the behavior. To do this, change your `?=` to `?!`:
+
+    ```js
+    const regex = /free(?!code)/i;
+    ```
+
+    Let's test this against our same strings:
+
+    ```js
+    const regex = /free(?!code)/i;
+    console.log(regex.test("freeCodeCamp")); // false
+    console.log(regex.test("free code camp")); // true
+    console.log(
+        regex.test("I need someone for free to write code for me")
+    ); // true
+    ```
+
+    As expected, the results are reversed. The only string that fails is the first string, where `free` is immediately followed by `code`.
+
+- Lookbehind assertions function similarly to lookahead assertions, except that, instead of matching conditionally based on a following pattern, they match conditionally based on a preceding pattern. Let's take a look at a positive lookbehind.
+
+A **positive lookbehind** is denoted with `?<=` instead of `?=`. Let's make our regular expression match `code` when it is preceded by `free`:
+
+    ```js
+    const regex = /(?<=free)code/i;
+    ```
+
+    Just like with our positive lookahead, our positive lookbehind matches the first string because `code` is immediately preceded by `free`:
+
+    ```js
+    const regex = /(?<=free)code/i;
+    console.log(regex.test("freeCodeCamp")); // true
+    console.log(regex.test("free code camp")); // false
+    console.log(
+        regex.test("I need someone for free to write code for me")
+    ); // false
+    ```
+
+- To match `code` when it is NOT preceded by `free`, we can use a negative lookbehind. A negative lookbehind is defined by replacing `?<=` with `?<!`:
+
+    ```js
+    const regex = /(?<!free)code/i;
+    ```
+
+    This would match any occurrence of `code` that is NOT immediately preceded by `free`.
+
+    ```js
+    const regex = /(?<!free)code/i;
+    console.log(regex.test("freeCodeCamp")); // false
+    console.log(regex.test("free code camp")); // true
+    console.log(
+        regex.test("I need someone for free to write code for me")
+    ); // true
+    ```
+
+Remember that `Regex.prototype.test` only confirms whether a string matches the regular expression. Let's use our negative lookbehind with `String.prototype.match` to see how assertions affect that:
+
+```js
+const regex = /(?<!free)code/i;
+
+console.log("freeCodeCamp".match(regex)); // null
+
+console.log("free code camp".match(regex)); 
+// ['code', index: 5, input: 'free code camp', groups: undefined]
+
+console.log(
+  "I need someone for free to write code for me".match(regex)
+); // ['code', index: 33, input: 'I need someone for free to write code for me', groups: undefined]
+```
+
+Notice how even though our regular expression uses a lookbehind to check for the presence of `free`, it does not match `free`. The only text included in the match is `code`.
+
+Lookaheads and lookbehinds are incredibly useful for conditionally matching text without impacting the returned value of your match.
 
 
-## 11.6. 
+## 11.6. What are regex quantifiers and how do they work?
 
+Consider a scenario where you want to match a four-digit identification code. You know you can use the `\d` character class, so you might write that four times. And to avoid any extraneous characters, you'd include both the start and end anchors:
 
-## 11.7. 
+```js
+const regex = /^\d\d\d\d$/;
+```
+
+And this does work – it will match four numerical characters. But rather than having to write out the same class multiple times, you can give it a quantifier.
+
+**Quantifiers** are defined by curly braces containing one or two numbers. Let's use a quantifier in our pattern:
+
+```js
+const regex = /^\d{4}$/;
+```
+
+Notice how our quantifier contains only the number `4`. This syntax means "match the previous character exactly four times". Let's see how that behaves:
+
+```js
+const regex = /^\d{4}$/;
+console.log(regex.test("123")); // false
+console.log(regex.test("1234")); // true
+console.log(regex.test("12345")); // false
+console.log(regex.test("123456")); // false
+console.log(regex.test("1234567")); // false
+```
+
+The pattern only matches the string with exactly four digits, because we have used the anchors and our quantifier only allows exactly four digits. But maybe the identification code only needs to be a minimum of four digits.
+
+To allow for four or more digits, add a comma after the number in your quantifier:
+
+```js
+const regex = /^\d{4,}$/;
+```
+
+Now, our syntax allows the pattern to match four or more digits. Let's test it:
+
+```js
+const regex = /^\d{4,}$/;
+console.log(regex.test("123")); // false
+console.log(regex.test("1234")); // true
+console.log(regex.test("12345")); // true
+console.log(regex.test("123456")); // true
+console.log(regex.test("1234567")); // true
+```
+
+A seven-digit identifier is rather long. These identifiers should have a maximum of 6 digits, and a minimum of 4 digits. To achieve this, you can add a second number to your quantifier after the comma:
+
+```js
+const regex = /^\d{4,6}$/;
+```
+
+And now our pattern no longer matches the seven-digit identifier, because it is greater than our six-digit maximum.
+
+```js
+const regex = /^\d{4,6}$/;
+console.log(regex.test("123")); // false
+console.log(regex.test("1234")); // true
+console.log(regex.test("12345")); // true
+console.log(regex.test("123456")); // true
+console.log(regex.test("1234567")); // false
+```
+
+> Note that you cannot use this syntax to set a maximum alone – you must always set a minimum. But if you set the minimum to `1`, you can effectively achieve the same result.
+
+We've received updated requirements from our users. Identifiers can now optionally start with a letter. We already know the character class for this, so let's add that to our regular expression:
+
+```js
+const regex = /^[a-zA-z]\d{4,6}$/;
+```
+
+But now we mandate the presence of a letter. How can we make it optional?
+
+You could use the quantifier syntax with `0` as the minimum and `1` as the maximum:
+
+```js
+const regex = /^[a-zA-Z]{0,1}\d{4,6}$/;
+```
+
+But there's actually a special shorthand quantifier for a single optional character – the question mark (`?`). Let's replace our quantifier with the question mark:
+
+```js
+const regex = /^[a-zA-Z]?\d{4,6}$/;
+```
+
+We should validate the result:
+
+```js
+const regex = /^[a-zA-Z]?\d{4,6}$/;
+console.log(regex.test("123")); // false
+console.log(regex.test("a1234")); // true
+console.log(regex.test("12345")); // true
+console.log(regex.test("az12345")); // false
+console.log(regex.test("X123456")); // true
+console.log(regex.test("1234567")); // false
+```
+
+Our pattern now allows for a single optional letter, followed by four to six digits.
+
+Unfortunately, we've just realized we read the requirements wrong. We need to allow for any number of letters before the numbers. We can use our quantifier with a `0` minimum and no defined maximum:
+
+```js
+const regex = /^[a-zA-Z]{0,}\d{4,6}$/;
+```
+
+But our pattern is getting long again. Thankfully, there's another short-hand for "match the previous character zero or more times" – the asterisk (`*`) symbol. Let's replace our quantifier with that in the pattern, and test it:
+
+```js
+const regex = /^[a-zA-Z]*\d{4,6}$/;
+console.log(regex.test("123")); // false
+console.log(regex.test("a1234")); // true
+console.log(regex.test("12345")); // true
+console.log(regex.test("az12345")); // true
+console.log(regex.test("X123456")); // true
+console.log(regex.test("1234567")); // false
+```
+
+Now we successfully match any identifier with zero or more letters followed by four to six numbers. But it turns out this is crashing our system – we actually have to require at least one letter.
+
+Again, we could use a quantifier with a minimum of one and no defined maximum, or we could use yet another special syntax – the plus (`+`) symbol:
+
+```js
+const regex = /^[a-zA-Z]+\d{4,6}$/;
+console.log(regex.test("123")); // false
+console.log(regex.test("a1234")); // true
+console.log(regex.test("12345")); // false
+console.log(regex.test("az12345")); // true
+console.log(regex.test("X123456")); // true
+console.log(regex.test("1234567")); // false
+```
+
+Now the identifiers that do not start with at least one letter fail, regardless of how many numbers there are.
+
+## 11.7. What are capturing groups and backreferences and how do they work?
+
+A capturing group allows you to "capture" a portion of the matched string to use however you might need. Capturing groups are defined by parentheses containing the pattern to capture, with no leading characters like a lookahead.
+
+Let's capture the `code` from our `freeCodeCamp` regular expression. To do that, we'll enclose `code` in parentheses and define it as a capture group:
+
+```js
+const regex = /free(code)camp/i;
+```
+
+To confirm the behavior, we can test it against a `freecodecamp` string:
+
+```js
+const regex = /free(code)camp/i;
+console.log(regex.test("freecodecamp")); // true
+```
+
+But this doesn't actually make use of our captured group. Instead, let's take a look at the result of using `match`:
+
+```js
+const regex = /free(code)camp/i;
+console.log("freecodecamp".match(regex));
+// [
+//   'freecodecamp',
+//   'code', <--
+//   index: 0,
+//   input: 'freecodecamp',
+//   groups: undefined
+// ]
+```
+
+Here we can see that our `match` array has a second element, which is the portion of the string which was captured by our capture group.
+
+Notice how the capture group matches the exact pattern `code`, where a character class would match a single character from the list `c`, `o`, `d`, and `e`.
+
+But how can we actually use this? Well, capture groups are often used when replacing contents of a string. Let's set up some code to do that. We're going to turn `freecodecamp` into `paidcodeworld`:
+
+```js
+const regex = /free(code)camp/i;
+console.log("freecodecamp".replace(regex, "paidcodeworld"));
+```
+
+This works on its own, but what if we didn't know how many `o`'s were in `code`? If we need a quantifier for one or more `o`s:
+
+```js
+const regex = /free(co+de)camp/i;
+console.log("freecoooooooodecamp".replace(regex, "paidcodeworld"));
+```
+
+We're getting `paidcodeworld` as our result. We want to preserve the number of `o`'s, so we need to reuse what was captured by the regular expression.
+
+This is where a backreference comes in. Instead of hardcoding the `code` portion of our replacement string, we can reference the captured group directly.
+
+In a `replace` call, you achieve a backreference by using a dollar sign (`$`) followed by the number of the capture group to use. In our case, that would be `$1`, since `code` is captured in the first capture group:
+
+```js
+const regex = /free(co+de)camp/i;
+console.log("freecoooooooodecamp".replace(regex, "paid$1world")); // paidcooooooooworld
+```
+
+We have now successfully preserved an unknown number of `o` characters when converting `freecodecamp` into `paidcodeworld`. But backreferences aren't just limited to the replace call. You can actually use them directly in a regular expression.
+
+This would allow you to match a previously captured pattern later on in the regular expression.
+
+Let's say we want to match `freecodecamp` twice, with the same number of `o`'s, but anywhere in the string.
+
+First, we need to separate them with our wildcard character, and allow any number of characters to match that wildcard:
+
+```js
+const regex = /free(co+de)camp.*free(co+de)camp/i;
+```
+
+This current expression won't ensure that the number of `o` characters is the same, however. To achieve that, we need to replace the second capture group with a reference to the first.
+
+Inside a regular expression, a backreference is denoted with a backslash followed by the number of the capture group:
+
+```js
+const regex = /free(co+de)camp.*free\1camp/i;
+console.log(regex.test("freecooooodecamp is great i love freecooooodecamp")); // true
+console.log(regex.test("freecooooodecamp is great i love freecodecamp")); // false
+```
+
+And with that, we can see that a string with the correct number of `o`s matches, while a string with two different numbers of `o`s does not.
+
+This syntax is great, but can quickly get confusing when you are referencing multiple capture groups. Thankfully, instead of using numbers, you can give your groups names.
+
+To define a named capture group, you add a question mark (`?`) followed by the name enclosed in less than and greater than signs to the beginning of the group. Let's name our capture group `code`:
+
+```js
+const regex = /free(?<code>co+de)camp.*free\1camp/i;
+```
+
+Now we can update our backreference in the regular expression to refer to this group. A named backreference starts with a backslash followed by the letter `k` in JavaScript. Then you add the name, again enclosed in less than (`<`) and greater than (`>`) signs. Let's take a look at that:
+
+```js
+const regex = /free(?<code>co+de)camp.*free\k<code>camp/i;
+```
+
+Now if we check our `test()` call, we can see that we still pass:
+
+```js
+const regex = /free(?<code>co+de)camp.*free\k<code>camp/i;
+console.log(regex.test("freecooooodecamp is freecooooodecamp")); // true
+```
+
+To use our named capture group in a `replace()` call, we'd insert a dollar sign into the string, followed by the name enclosed in less than and greater than signs:
+
+```js
+const regex = /free(?<code>co+de)camp/i;
+console.log("freecooooodecamp".replace(regex, "paid$<code>camp")); // paidcooooodecamp
+```
+
+Finally, sometimes you want to create a group of characters, but don't need the captured result.
+
+Let's say we want to match either `freecodecamp` or `freecandycamp`. You could create two patterns separated by an OR assertion:
+
+```js
+const regex = /freecodecamp|freecandycamp/i;
+```
+
+But this can become quite lengthy for larger-scale regular expressions. Instead, you can create a non-capturing group around the characters that you need to OR:
+
+```js
+const regex = /free(?:code|candy)camp/i;
+```
+
+A non-capturing group does not store the `code|candy` match separately in memory. But it can be helpful for creating alternate patterns without sacrificing readability or performance.
 
 
 </div>
