--- a/css/11_positioning/2.md
+++ b/css/11_positioning/2.md
@@ -281,14 +281,123 @@ body {
 index.html: 
 
 ```html
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>House Painting</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="scene">
+    <div class="sky">
+      <div class="house">
+        <div class="roof"></div>
+        <div class="chimney"></div>
+        <div class="door"></div>
+        <div class="window window-1"></div>
+        <div class="window window-2"></div>
+      </div>
+    </div>
+    <div class="ground"></div>
+  </div>
+</body>
+</html>
 ```
 
 styles.css: 
 
 ```css
+* {
+  box-sizing: border-box;
+}
 
+body {
+  margin: 0;
+  font-family: sans-serif;
+  background-color: #87ceeb; /* sky blue */
+}
+
+.scene {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.sky {
+  flex: 2;
+  position: relative;
+}
+
+.ground {
+  flex: 1;
+  background-color: #4CAF50; /* grassy green */
+}
+
+.house {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 300px;
+  height: 200px;
+  background-color: #fff8dc;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+.roof {
+  position: absolute;
+  top: -100px;
+  left: -10px;
+  width: 0;
+  height: 0;
+  border-left: 160px solid transparent;
+  border-right: 160px solid transparent;
+  border-bottom: 100px solid #b22222; /* firebrick */
+}
+
+.chimney {
+  position: absolute;
+  top: -80px;
+  left: 60px;
+  width: 30px;
+  height: 60px;
+  background-color: #555;
+}
+
+.door {
+  position: absolute;
+  bottom: 0;
+  left: 110px;
+  width: 80px;
+  height: 100px;
+  background-color: #8b4513; /* saddle brown */
+  border-radius: 5px;
+}
+
+.window {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-color: #add8e6;
+  border: 2px solid #444;
+  border-radius: 5px;
+}
+
+.window-1 {
+  top: 50px;
+  left: 30px;
+}
+
+.window-2 {
+  top: 50px;
+  right: 30px;
+}
 ```
 
+<div style="margin: 10px auto; width: 100%;">
+    <p><img style=" background-color: transparent;" alt="box model in web tools" src="../../img/css_11_2_2.PNG"></p>
+</div>
 
 </div>
