--- a/css/12_attribute_selectors/2.md
+++ b/css/12_attribute_selectors/2.md
@@ -302,20 +302,152 @@ tr.data td:last-of-type {
 index.html: 
 
 ```html
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <title>Book Inventory</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <h1>Book Inventory</h1>
+  <table>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Author</th>
+        <th>Category</th>
+        <th>Status</th>
+        <th>Rate</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="to-read">
+        <td>The Midnight Library</td>
+        <td>Matt Haig</td>
+        <td>Fiction</td>
+        <td><span class="status">To Read</span></td>
+        <td><span class="rate"><span></span><span></span><span></span></span></td>
+      </tr>
+      <tr class="in-progress">
+        <td>Sapiens: A Brief History of Humankind</td>
+        <td>Yuval Noah Harari</td>
+        <td>Non-fiction</td>
+        <td><span class="status">In Progress</span></td>
+        <td><span class="rate"><span></span><span></span><span></span></span></td>
+      </tr>
+      <tr class="read">
+        <td>The Catcher in the Rye</td>
+        <td>J.D. Salinger</td>
+        <td>Classic</td>
+        <td><span class="status">Read</span></td>
+        <td><span class="rate one"><span></span><span></span><span></span></span></td>
+      </tr>
+      <tr class="read">
+        <td>Educated</td>
+        <td>Tara Westover</td>
+        <td>Memoir</td>
+        <td><span class="status">Read</span></td>
+        <td><span class="rate two"><span></span><span></span><span></span></span></td>
+      </tr>
+      <tr class="read">
+        <td>1984</td>
+        <td>George Orwell</td>
+        <td>Dystopian</td>
+        <td><span class="status">Read</span></td>
+        <td><span class="rate three"><span></span><span></span><span></span></span></td>
+      </tr>
+    </tbody>
+
+  </table>
+</body>
+
+</html>
 ```
 
 styles.css: 
 
 ```css
+/* Targets table rows with class "to-read" and applies a red-orange background gradient */
+tr[class="to-read"] {
+  background-image: linear-gradient(to bottom right, red, orange);
+}
 
+/* Targets table rows with class "in-progress" and applies an orange-yellow background gradient */
+tr[class="in-progress"] {
+  background-image: linear-gradient(to bottom right, orange, yellow);
+}
+
+/* Targets table rows with class "read" and applies a lightblue-green background gradient */
+tr[class="read"] {
+  background-image: linear-gradient(to bottom right, lightblue, green);
+}
+
+/* Makes all span elements display as inline-block */
+span {
+  display: inline-block;
+}
+
+/* Targets span elements with class "status" inside rows with class "to-read" */
+tr[class="to-read"] span[class="status"] {
+  background-image: linear-gradient(to bottom right, orange, lightgrey);
+  border: 1px solid black;
+}
+
+/* Targets span elements with class "status" inside rows with class "in-progress" */
+tr[class="in-progress"] span[class="status"] {
+  background-image: linear-gradient(to bottom right, yellow, lightgrey);
+  border: 1px solid black;
+}
+
+/* Targets span elements with class "status" inside rows with class "read" */
+tr[class="read"] span[class="status"] {
+  background-image: linear-gradient(to bottom right, lightgreen, lightgrey);
+  border: 1px solid black;
+}
+
+/* Applies shared styles to all span elements with class "status" inside any table row */
+tr span[class="status"] {
+  border: 1px solid black;
+  border-radius: 30px;
+  padding: 10px;
+}
+
+/* Targets all span elements with class "status" or whose class starts with "rate" */
+span[class="status"], span[class^="rate"] {
+  height: 30px;
+  width: 80px;
+  padding: 10px;
+  text-align: center;
+}
+
+/* Targets span children of elements whose class starts with "rate" and styles them as circular dots */
+span[class^="rate"] > span {
+  border: 1px solid grey;
+  border-radius: 100%;
+  margin: 1px;
+  height: 10px;
+  width: 10px;
+  background-color: lightgrey;
+}
+
+/* Targets the first child span inside any span element whose class includes the word "one" */
+span[class~="one"] > span:first-of-type {
+  background-image: linear-gradient(to bottom left, purple, pink);
+}
+
+/* An attribute selector to target the first two descendants of span elements that have the word "two" as part of their class value */
+span[class~="two"] :nth-child(1), 
+span[class~="two"] :nth-child(2) {
+  background-image: linear-gradient(to bottom left, purple, pink);
+}
+
+/* Targets all child spans inside a span element whose class includes the word "three" */
+span[class~="three"] > span {
+  background-image: linear-gradient(to bottom left, purple, pink);
+}
 ```
-
-script.js:
-
-```js
-
-```
-
 
 </div>
