--- a/css/14_variables/2.md
+++ b/css/14_variables/2.md
@@ -424,13 +424,275 @@ The city skyline changes with the viewport: under 1000px, you’ll see a peacefu
 index.html: 
 
 ```html
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Availability Table</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<main>
+  <table>
+    <tbody>
+      <tr class="sharp">
+        <th rowspan="2" class="time">9 AM</th>
+        <th>Monday</th>
+        <th>Tuesday</th>
+        <th>Wednesday</th>
+        <th>Thursday</th>
+        <th>Friday</th>
+      </tr>
+      <tr class="half">
+        <td class="available-0"></td>
+        <td class="available-1"></td>
+        <td class="available-2"></td>
+        <td class="available-2"></td>
+        <td class="available-5"></td>
+      </tr>
+      <tr class="sharp">
+        <th rowspan="2" class="time">10 AM</th>
+        <td class="available-3"></td>
+        <td class="available-4"></td>
+        <td class="available-4"></td>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+      </tr>
+
+      <tr class="half">
+        <td class="available-3"></td>
+        <td class="available-4"></td>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+      </tr>
+      <tr class="sharp">
+        <th rowspan="2" class="time">11 AM</th>
+        <td class="available-0"></td>
+        <td class="available-2"></td>
+        <td class="available-4"></td>
+        <td class="available-4"></td>
+        <td class="available-0"></td>
+      </tr>
+      <tr class="half">
+        <td class="available-3"></td>
+        <td class="available-4"></td>
+        <td class="available-1"></td>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+      </tr>
+      <tr class="sharp">
+        <th rowspan="2" class="time">12 PM</th>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+        <td class="available-3"></td>
+        <td class="available-2"></td>
+        <td class="available-0"></td>
+      </tr>
+      <tr class="half">
+        <td class="available-3"></td>
+        <td class="available-0"></td>
+        <td class="available-4"></td>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+      </tr>
+      <tr class="sharp">
+        <th rowspan="2" class="time">1 PM</th>
+        <td class="available-2"></td>
+        <td class="available-3"></td>
+        <td class="available-3"></td>
+        <td class="available-2"></td>
+        <td class="available-0"></td>
+      </tr>
+      <tr class="half">
+        <td class="available-3"></td>
+        <td class="available-4"></td>
+        <td class="available-4"></td>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+      </tr>
+      <tr class="sharp">
+        <th rowspan="2" class="time">2 PM</th>
+        <td class="available-0"></td>
+        <td class="available-3"></td>
+        <td class="available-4"></td>
+        <td class="available-4"></td>
+        <td class="available-4"></td>
+      </tr>
+      <tr class="half">
+        <td class="available-3"></td>
+        <td class="available-4"></td>
+        <td class="available-4"></td>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+      </tr>
+      <tr class="sharp">
+        <th rowspan="2" class="time">3 PM</th>
+        <td class="available-3"></td>
+        <td class="available-3"></td>
+        <td class="available-4"></td>
+        <td class="available-5"></td>
+        <td class="available-4"></td>
+      </tr>
+      <tr class="half">
+        <td class="available-3"></td>
+        <td class="available-4"></td>
+        <td class="available-4"></td>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+      </tr>
+      <tr class="sharp">
+        <th rowspan="2" class="time">4 PM</th>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+        <td class="available-4"></td>
+        <td class="available-4"></td>
+      </tr>
+      <tr class="half">
+        <td class="available-3"></td>
+        <td class="available-0"></td>
+        <td class="available-4"></td>
+        <td class="available-2"></td>
+        <td class="available-5"></td>
+      </tr>
+      <tr class="sharp">
+        <th rowspan="2" class="time">5 PM</th>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+        <td class="available-5"></td>
+        <td class="available-3"></td>
+        <td class="available-4"></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+  <div id="legend">
+    <span id="legend-title">Availability</span>
+    <div id="legend-line"><span>0</span>
+      <div id="legend-gradient"></div><span>5+</span>
+    </div>
+  </div>
+</main>
+</body>
+
+</html>
 ```
 
 styles.css: 
 
 ```css
+:root {
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  --color0: #ffffff;
+  --color1: #d0f5d7;
+  --color2: #a1ebaf;
+  --color3: #4fd67a;
+  --color4: #029c41;
+  --color5: #016026;
+  --solid-border: 0.1rem solid black;
+  --dashed-border: 0.09rem dashed black;
+}
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: hsl(150, 30%, 75%);
+  width: 100vw;
+  height: 100vh;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+table {
+  border-collapse: collapse;
+  table-layout: fixed;
+  width: 32rem;
+}
+
+tr { height: 1.1rem; }
+
+tr :first-child { width: 4rem; }
+
+td {
+  border-right: var(--solid-border);
+  border-left: var(--solid-border);
+}
+
+.sharp td { border-bottom: var(--solid-border); }
+
+.sharp th:not([class*="time"]) { border-bottom: var(--solid-border); }
+
+.half td { border-bottom: var(--dashed-border); }
+
+tbody :last-child td { border: 0; }
+
+.time {
+  text-align: right;
+  border: 0;
+  padding: 0.4rem;
+}
+
+.available-0 { background-color: var(--color0); }
+.available-1 { background-color: var(--color1); }
+.available-2 { background-color: var(--color2); }
+.available-3 { background-color: var(--color3); }
+.available-4 { background-color: var(--color4); }
+.available-5 { background-color: var(--color5); }
+
+#legend {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 18rem;
+  height: 3.5rem;
+  text-align: center;
+}
+
+#legend span {
+  display: inline-block;
+  width: 5rem;
+  height: 2rem;
+}
+
+#legend-gradient {
+  width: 100%;
+  height: 60%;
+  border: var(--solid-border);
+  background-image: linear-gradient(90deg,
+    var(--color0) 0% 17%,
+    var(--color1) 17% 34%,
+    var(--color2) 34% 50%,
+    var(--color3) 50% 67%,
+    var(--color4) 67% 83%,
+    var(--color5) 83% 100%);
+}
+
+#legend-line {
+  width: 60%;
+  height: 100%;
+  display: flex;
+}
 ```
 
 </div>
