--- a/html/1_basic_html/5.md
+++ b/html/1_basic_html/5.md
@@ -7,23 +7,20 @@
 1. The main element is used to represent the <code>main</code> content of the body of an HTML document. Content inside the main element should be unique to the document and should not be repeated in other parts of the document.
 
 2. To open links in a new tab, you can use the <code>target</code> attribute on the anchor (<code>a</code>) element. The target attribute specifies where to open the linked document. <code>target="_blank"</code> opens the linked document in a new tab or window. <br> Here is the basic syntax for an <code>a</code> element with a <code>target</code> attribute:
- <br> Example Code:
-<code>  </code>
 
-
-```html
-<a href="https://www.freecodecamp.org" target="_blank">freeC
-```
+    ```html
+    <a href="https://www.freecodecamp.org" target="_blank">freeC
+    ```
 
 3. The <code>figure</code> element represents self-contained content and will allow you to associate an image with a caption.
 
 
-```html
-<figure>
-    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-    <figcaption>Cats <em>love</em> lasagna.</figcaption>
-</figure>
-```
+    ```html
+    <figure>
+        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
+        <figcaption>Cats <em>love</em> lasagna.</figcaption>
+    </figure>
+    ```
 
 Complete code:
 
@@ -85,7 +82,22 @@ Complete code:
 </html>
 ```
 
-## 2. A Travel Agency Page
+## 2. A Heart Icon
+
+1. The `viewBox` attribute of the `svg` element controls how much of the image is visible:
+   1. The first two numbers set the center of the image.
+   2. The following two numbers set the size of the image we can see (width x height).
+2. The `d` attribute of the `path` element is used to create a series of command letters and numbers that draw a shape. These letters represent commands like move to, draw line, and close, while the numbers represent coordinates.
+
+```html
+<svg width="24" height="24" viewBox="0 0 24 24" fill="red">
+  <path
+    d="M12 21s-6-4.35-9.33-8.22C-.5 7.39 3.24 1 8.4 4.28 10.08 5.32 12 7.5 12 7.5s1.92-2.18 3.6-3.22C20.76 1 24.5 7.39 21.33 12.78 18 16.65 12 21 12 21z"
+  ></path>
+</svg>
+```
+
+## 3. A Travel Agency Page
 
 
 ```html
@@ -138,7 +150,7 @@ Complete code:
 </html>
 ```
 
-## 3. A Video Compliation Page
+## 4. A Video Compliation Page
 
 
 ```html
@@ -146,54 +158,54 @@ Complete code:
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Video Compilation Page</title>
+  <meta charset="utf-8">
+  <title>Video Compilation Page</title>
 </head>
 
 <body>
-    <main>
-        <h1>Front End Web Development</h1>
-        <p>
-            Front End Web Development involves designing and building user interfaces of websites using HTML,
-            CSS, and JavaScript. It focuses on creating visually appealing, interactive, and user-friendly
-            websites. Front End developers ensure accessibility, performance optimization, and adherence to
-            web standards, blending creativity with technical expertise.
-        </p>
+  <main>
+    <h1>Front End Web Development</h1>
+    <p>
+      Front End Web Development involves designing and building user interfaces of websites using 
+      HTML, CSS, and JavaScript. It focuses on creating visually appealing, interactive, and 
+      user-friendly websites. Front End developers ensure accessibility, performance 
+      optimization, and adherence to web standards, blending creativity with technical expertise.
+    </p>
 
-        <section>
-            <h2>HTML</h2>
-            <p>
-                HTML, or HyperText Markup Language, forms the backbone of web pages by defining their basic
-                structure and layout. It uses a series of elements to display text, images, lists, tables,
-                and other static content on a web page.
-            </p>
-            <iframe src="https://www.youtube.com/embed/watch?v=rJO84scyxqo&list=RDrJO84scyxqo&start_radio=1"
-                title="YouTube video player" height="315" width="560"></iframe>
-        </section>
+    <section>
+      <h2>HTML</h2>
+      <p>
+        HTML, or HyperText Markup Language, forms the backbone of web pages by defining their 
+        basic structure and layout. It uses a series of elements to display text, images, lists, 
+        tables, and other static content on a web page.
+      </p>
+      <iframe src="https://www.youtube.com/embed/watch?v=rJO84scyxqo&list=RDrJO84scyxqo&start_radio=1"
+        title="YouTube video player" height="315" width="560"></iframe>
+    </section>
 
-        <section>
-            <h2>CSS</h2>
-            <p>
-                CSS, or Cascading Style Sheets, is used to control the visual presentation of HTML elements
-                on a web page. It allows for customized styling, including colors, fonts, layouts, and
-                spacing, making websites visually appealing. CSS also supports responsive design, ensuring
-                web pages look good on all devices.
-            </p>
-            <iframe src="https://www.youtube.com/embed/watch?v=rJO84scyxqo&list=RDrJO84scyxqo&start_radio=1"
-                title="YouTube video player" height="315" width="560"></iframe>
-        </section>
+    <section>
+      <h2>CSS</h2>
+      <p>
+        CSS, or Cascading Style Sheets, is used to control the visual presentation of HTML elements
+        on a web page. It allows for customized styling, including colors, fonts, layouts, and
+        spacing, making websites visually appealing. CSS also supports responsive design, ensuring
+        web pages look good on all devices.
+      </p>
+      <iframe src="https://www.youtube.com/embed/watch?v=rJO84scyxqo&list=RDrJO84scyxqo&start_radio=1"
+        title="YouTube video player" height="315" width="560"></iframe>
+    </section>
 
-        <section>
-            <h2>JavaScript</h2>
-            <p>
-                JavaScript is a programming language that adds interactivity to static web pages, enabling
-                dynamic content updates, form validations, animations, and responsive behaviors based on
-                user interactions and events.
-            </p>
-            <iframe src="https://www.youtube.com/embed/watch?v=rJO84scyxqo&list=RDrJO84scyxqo&start_radio=1"
-                title="YouTube video player" height="315" width="560"></iframe>
-        </section>
-    </main>
+    <section>
+      <h2>JavaScript</h2>
+      <p>
+        JavaScript is a programming language that adds interactivity to static web pages, enabling
+        dynamic content updates, form validations, animations, and responsive behaviors based on
+        user interactions and events.
+      </p>
+      <iframe src="https://www.youtube.com/embed/watch?v=rJO84scyxqo&list=RDrJO84scyxqo&start_radio=1"
+        title="YouTube video player" height="315" width="560"></iframe>
+    </section>
+  </main>
 </body>
 
 </html>
